# DNS-MAX

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DOCS.md  ENVIRONMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_OLD_BROKEN.md  TESTING_DOMAINS.md  UI_IMPLEMENTATION_CHECKLIST.md  UI_OPTIMIZATION_GUIDE.md  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.registry.yml  docker-compose.yml  env.example  start.cmd
.bmad-core/: install-manifest.yaml
.github/workflows/: auto-package.yml  ci.yml  docker-build.yml
api/: Dockerfile  Dockerfile.dev  requirements.txt  start.sh
archive/: README.md
backend/: Dockerfile  init.sql  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  domains.py  providers.py  records.py
backend/app/core/: config.py  security.py
backend/app/crud/: dns.py  user.py
backend/app/db/: base.py  session.py
backend/app/dns_providers/: __init__.py  aliyun.py  base.py  cloudflare.py  tencent.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  dns.py  user.py
backend/tests/: conftest.py  test_main.py
docs/: API.md  CONFIGURATION.md  PRIVACY_POLICY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  TERMS_OF_SERVICE.md  TROUBLESHOOTING.md
frontend/: .prettierignore  Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
nginx/: nginx.conf
proxy/: Caddyfile
web/: Dockerfile  Dockerfile.dev  UI_COMPONENTS_README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
(+78 files in other folders)
